--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <header >
        
-        <a style="width: 30%;" href="./index.html" target="_blank"><img style ="width: 60%;" src="/assets/image/5-removebg-preview.png" style="width: 30%;"></a>
+        <a style="width: 30%;" href="index.html" target="_blank"><img style ="width: 60%;" src="assets/image/5-removebg-preview.png" style="width: 30%;"></a>
 
        
         <div class="nav-bar"><a href="a-propos.html#histoire" target="_blank">Qui sommes-nous ?</a></div>
