--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="code/style.css" rel="stylesheet" /> 
+    <link href="style.css" rel="stylesheet" /> 
    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,10 +23,10 @@
         <a style="width: 30%;" href="index.html" target="_blank"><img style ="width: 60%;" src="assets/image/5-removebg-preview.png" style="width: 30%;"></a>
 
        
-        <div class="nav-bar"><a href="code/a-propos.html#histoire" target="_blank">Qui sommes-nous ?</a></div>
-        <div class="nav-bar"><a href="code/menu.html" target="_blank">Nos pizzas</a></div>
-        <div class="nav-bar"><a href="code/menu.html#moment" target="_blank">Commander</a></div>
-        <div class="nav-bar"><a href ="code/a-propos.html#map" target="_blank">Plan d'accès</a></div>
+        <div class="nav-bar"><a href="a-propos.html#histoire" target="_blank">Qui sommes-nous ?</a></div>
+        <div class="nav-bar"><a href="menu.html" target="_blank">Nos pizzas</a></div>
+        <div class="nav-bar"><a href="menu.html#moment" target="_blank">Commander</a></div>
+        <div class="nav-bar"><a href ="a-propos.html#map" target="_blank">Plan d'accès</a></div>
 
         
             <button class="header"><a href="code/a-propos.html#form-contact" target="_blank">Nous contacter</a></button>
