--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <a style="width: 30%;" href="index.html" target="_blank"><img style ="width: 60%;" src="assets/image/5-removebg-preview.png" style="width: 30%;"></a>
 
        
-        <div class="nav-bar"><a href="./a-propos.html#histoire" >Qui sommes-nous ?</a></div>
-        <div class="nav-bar"><a href="./menu.html">Nos pizzas</a></div>
+        <div class="nav-bar"><a href="/code/a-propos.html#histoire" >Qui sommes-nous ?</a></div>
+        <div class="nav-bar"><a href="/code/menu.html">Nos pizzas</a></div>
         <div class="nav-bar"><a href="/code/menu.html#moment">Commander</a></div>
         <div class="nav-bar"><a href ="/code/a-propos.html#map">Plan d'accès</a></div>
 
