--- a/code/montions-légales.html
+++ b/code/montions-légales.html
@@ -11,7 +11,7 @@
     <link href="https : //fonts.googleapis.com/css2?family= famille= Danse+Script:poids@700 & display=swap" rel="stylesheet">
 
   
-    <link href="code/style-2.css" rel="stylesheet" /> 
+    <link href="style-2.css" rel="stylesheet" /> 
     
     <title>Politique de confidentialité</title>
 </head>
