--- a/code/menu.html
+++ b/code/menu.html
@@ -46,7 +46,7 @@
     
         <div class="one-logo">
 
-            <a href="index.html"><img src="../assets/image/5-removebg-preview.png" alt="une pizza"></a>
+            <a href="./index.html"><img src="../assets/image/5-removebg-preview.png" alt="une pizza"></a>
 
         </div>
 
