--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <section class="one">
         <div class="one-nom">
             
-            <h1  class="menutitle"><strong style="font-weight: 600; font-family:'Dancing Script, cursive';">Chez Jonathan</strong></h1>
-             <p style="font-weight: 600; font-family:'Dancing Script, cursive';">Pizzas</p>
+            <h1  class="menutitle"><strong style="font-weight: 600; font-family:'Pinyon Script';;">Chez Jonathan</strong></h1>
+             <p style="font-weight: 600; font-family:'Pinyon Script;';">Pizzas</p>
 
         </div>
        
