--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="one-nom">
             
             <h1  class="menutitle"><strong style="font-weight: 600; font-family:'Pinyon Script';;">Chez Jonathan</strong></h1>
-             <p style="font-weight: 600; font-family:'Pinyon Script;';">Pizzas</p>
+             <p style="font-weight: 600; font-family:'Pinyon Script';">Pizzas</p>
 
         </div>
        
