--- a/code/a-propos.html
+++ b/code/a-propos.html
@@ -42,8 +42,10 @@
         <section class="one">
           <div class="one-nom">
               
-              <h1 style="color: rgb(209, 50, 50);margin-top: 30%;"><strong>Chez Jonathan</strong></h1>
-               <p style="color: rgb(209, 50, 50);"><strong>Pizzas</strong></p>
+              <h1 style="color: rgb(209, 50, 50);margin-top: 30%; font-family: 'Pinyon Script';
+}"><strong>Chez Jonathan</strong></h1>
+               <p style="color: rgb(209, 50, 50); font-family: 'Pinyon Script';
+}"><strong>Pizzas</strong></p>
   
           </div>
          
