--- a/code/menu.html
+++ b/code/menu.html
@@ -38,8 +38,8 @@
     <section class="one">
         <div class="one-nom">
             
-            <h1 class="menutitle"><strong>Chez Jonathan</strong></h1>
-             <p >Pizzas</p>
+            <h1 class="menutitle" style= "font-family: 'Pinyon Script';"><strong>Chez Jonathan</strong></h1>
+             <p style= "font-family: 'Pinyon Script';">Pizzas</p>
 
         </div>
        
