--- a/code/montions-légales.html
+++ b/code/montions-légales.html
@@ -41,8 +41,8 @@
       <section class="one">
         <div class="one-nom">
             
-            <h1 style="color: rgb(209, 50, 50);"><strong>Chez Jonathan</strong></h1>
-             <p style="color: rgb(209, 50, 50);"><strong>Pizzas</strong></p>
+            <h1 style="color: rgb(209, 50, 50); font-family: 'Pinyon Script';"><strong>Chez Jonathan</strong></h1>
+             <p style="color: rgb(209, 50, 50);  font-family: 'Pinyon Script';"><strong>Pizzas</strong></p>
 
         </div>
        
