--- a/code/menu.html
+++ b/code/menu.html
@@ -39,7 +39,7 @@
         <div class="one-nom">
             
             <h1 class="menutitle" style= "font-family: 'Pinyon Script';"><strong>Chez Jonathan</strong></h1>
-             <p style= "font-family: 'Pinyon Script';">Pizzas</p>
+             <p style= "font-family: 'Pinyon Script';"><strong>Pizzas</strong></p>
 
         </div>
        
