--- a/code/menu.html
+++ b/code/menu.html
@@ -20,7 +20,7 @@
 <body>
     <header >
        
-        <a style="width: 30%;" href="./index.html"><img src="./assets/image/pizza/5-removebg-preview.png" style=width: 60%;"></a>
+        <a style="width: 30%;" href="../index.html"><img src="../assets/image/pizza/5-removebg-preview.png" style=width: 60%;"></a>
 
        
         <div class="nav-bar"><a href="a-propos.html#histoire" target="_blank">Qui sommes-nous ?</a></div>
