--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
 
     <footer>
         <div class="lien">
-            <a href= "code/montions-l%C3%A9gales.html#confident" >Politique de confidentialité</a>
-            <a href="code/montions-l%C3%A9gales.html#légales" >Mentions légales</a>
+            <a href= "code/montions-légales.html#confident" >Politique de confidentialité</a>
+            <a href="code/montions-légales.html#légales" >Mentions légales</a>
             <a href="code/a-propos.html#form-contact" >Nous contacter</a>
     </div>
    <div class="copy">
