--- a/code/montions-légales.html
+++ b/code/montions-légales.html
@@ -24,7 +24,7 @@
 <body>
     <header>
        
-        <a href="../index.html" target="_blank"><img src="/assets/image/pizza/5-removebg-preview.png" style="width: 60%;"></a>
+        <a href="../index.html" target="_blank"><img src="../assets/image/pizza/5-removebg-preview.png" style="width: 60%;"></a>
 
        
             <div class="nav-bar"><a href="a-propos.html#histoire" target="_blank">Qui sommes-nous ?</a></div>
