--- a/code/a-propos.html
+++ b/code/a-propos.html
@@ -147,8 +147,8 @@
 
 <footer>
   <div class="lien">
-   <a href= "http://127.0.0.1:5500/code/montions-l%C3%A9gales.html#confident" target="_blank">Politique de confidentialité</a>
-   <a href="http://127.0.0.1:5500/code/montions-l%C3%A9gales.html#légales" target="_blank">Mentions légales</a>
+   <a href= montions-légales.html#confident>Politique de confidentialité</a>
+   <a href=montions-légales.html#légale>Mentions légales</a>
    <a href="#form-contact" >Nous contacter</a>
 
   </div>
