--- a/code/montions-légales.html
+++ b/code/montions-légales.html
@@ -49,7 +49,7 @@
     
         <div class="one-logo">
 
-            <a href="http://127.0.0.1:5500/index.html"><img src="assets/image/pizza/5-removebg-preview.png" alt="une pizza"></a>
+            <a href="http://127.0.0.1:5500/index.html"><img src="../assets/image/pizza/5-removebg-preview.png" alt="une pizza"></a>
 
         </div>
 
