--- a/code/montions-légales.html
+++ b/code/montions-légales.html
@@ -246,7 +246,7 @@
       <div class="lien">
               <a href="#confident">Politique de confidentialité</a>
               <a href="#légales">Mentions légales</a>
-              <a href="code/a-propos.html#form-contact" target="_blank">Nous contacter</a>
+              <a href=a-propos.html#form-contact>Nous contacter</a>
       </div>
      <div class="copy">
       <p style="font-size: 1.6rem;"> &copy; 2023 Chez Jonathan </p>
