--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
 
     </section>
-    <section class="two">
+    <section class="two" style="background-image:url(assets/image/background/vector 2.png)";>
         <div class="containe">
              <div class="two-intro"> 
 
