--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     </section>
     <section class="two"  style="background-image:url(assets/image/background/imgback.jpg)">
-        <div class="containe">
+        <div class="containe"  style="background-image:url(assets/image/background/imgback.jpg)">
              <div class="two-intro"> 
 
                 <h2>Une histoire</h2>
