--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         </div>
 
     </section>
-    <section class="two"  style="background-image:url(assets/image/background/imgback.jpg)">
-        <div class="containe"  style="background-image:url(assets/image/background/imgback.jpg)">
+    <section class="two" >
+        <div class="containe">
              <div class="two-intro"> 
 
                 <h2>Une histoire</h2>
