--- a/code/a-propos.html
+++ b/code/a-propos.html
@@ -27,10 +27,10 @@
         <a href="../index.html" target="_blank"><img src="../assets/image/5-removebg-preview.png" style="width: 45%;"></a>
 
        <div class="nav-barre-container">
-        <div class="nav-bar"><a href="a-propos.html#histoire" target="_blank">Qui sommes-nous ?</a></div>
-        <div class="nav-bar"><a href="menu.html" target="_blank">Nos pizzas</a></div>
-        <div class="nav-bar"><a href="code/menu.html#moment" target="_blank">Commander</a></div>
-        <div class="nav-bar"><a href ="code/a-propos.html#map" target="_blank">Plan d'accès</a></div>
+        <div  style=" width:30%" class="nav-bar"><a href="a-propos.html#histoire" target="_blank">Qui sommes-nous ?</a></div>
+        <div style=" width:25%" class="nav-bar"><a href="menu.html" target="_blank">Nos pizzas</a></div>
+        <div style=" width:25%" class="nav-bar"><a href="code/menu.html#moment" target="_blank">Commander</a></div>
+        <div style=" width:25%" class="nav-bar"><a href ="code/a-propos.html#map" target="_blank">Plan d'accès</a></div>
 
      
             <button class="header"><a href="#form-contact">Nous contacter</a></button>
