--- a/code/montions-légales.html
+++ b/code/montions-légales.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap" rel="stylesheet"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https : //fonts.googleapis.com/css2?family= famille= Danse+Script:poids@700 & display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="/assets/image/5-remouvebg-preview.png" type="image/x-icon">
 
   
     <link href="style-2.css" rel="stylesheet" /> 
