--- a/code/menu.html
+++ b/code/menu.html
@@ -30,7 +30,7 @@
         <a href="../index.html"><img src="../assets/image/5-removebg-preview.png" style="width: 30%;"></a>
 
 
-    <div class="nav-bar-container">
+    <div id="nav-bar-container">
         <div class="nav-bar"><a href="a-propos.html#histoire">Qui sommes-nous ?</a></div>
         <div class="nav-bar"><a href="menu.html" >Nos pizzas</a></div>
         <div class="nav-bar"><a href="menu.html#moment">Commander</a></div>
