--- a/code/montions-légales.html
+++ b/code/montions-légales.html
@@ -55,7 +55,7 @@
         </div>
 
         <h2 id="légales" style="color: black; font-weight: bolder; font-size: 3rem;"> Politique de confidentialité </h2>
-        <h2 style="color: black; font-weight: bolder; font-size: 3rem;">et montions légales</h2>
+        <h2 style="color: black; font-weight: bolder; font-size: 3rem;">et mentions légales</h2>
     </section>
 
         <section class="politique">
