--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <section class="three">
         <div id="top" style="display: flex;">
             <div classe="image-pizza" style="padding-top: 5%;">
-                <img style="width: 30rem;"  src="assets/image/7-removebg-preview.png" alt="une pizza">
+                <img class="pizzaLogo" src="assets/image/7-removebg-preview.png" alt="une pizza">
             </div>
 
             <div class="nos-pizzas">
